Release 2026.06-ext0 - 39.0.2